--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@hackclub/hackclub-icons-rn": "github:thedev132/hackclub-icons-rn",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/geolocation": "^3.3.0",
     "@react-native-menu/menu": "^1.1.6",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
+    "@stripe/stripe-terminal-react-native": "^0.0.1-beta.20",
     "date-fns": "^2.30.0",
     "eas-cli": "^13.4.2",
     "expo": "^52.0.23",
     "expo-alternate-app-icons": "^1.1.0",
     "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
+    "expo-build-properties": "^0.13.2",
     "expo-clipboard": "~7.0.0",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
@@ -44,6 +48,7 @@
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-local-authentication": "~15.0.1",
+    "expo-location": "^18.0.5",
     "expo-notifications": "~0.29.11",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.18",
@@ -61,6 +66,7 @@
     "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "6.5.1",
     "react-native-picker-select": "^9.3.1",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -72,11 +78,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
-    "@react-native-community/cli": "^12.3.5",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.198",
-    "@types/react": "~18.3.12",
+    "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
