--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/geolocation": "^3.3.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-menu/menu": "^1.1.6",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -63,6 +64,7 @@
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-offline": "^6.0.2",
     "react-native-pager-view": "6.5.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-progress": "^5.0.1",
