--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
     "expo-dev-client": "~5.0.8",
-    "expo-device": "~7.0.1",
+    "expo-device": "~7.0.2",
     "expo-haptics": "~14.0.0",
     "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.3",
@@ -55,6 +55,7 @@
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
+    "expo-updates": "^0.26.19",
     "expo-web-browser": "~14.0.1",
     "geopattern": "github:thedev132/geopattern",
     "humanize-string": "^3.0.0",
@@ -62,6 +63,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-native": "0.76.5",
+    "react-native-alert-notification": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "6.5.1",
