--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "expo-system-ui": "~4.0.6",
     "expo-updates": "^0.26.19",
     "expo-web-browser": "~14.0.1",
-    "geopattern": "github:thedev132/geopattern",
+    "hcb-geo-pattern": "^1.0.1",
     "humanize-string": "^3.0.0",
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
