--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hackclub/hackclub-icons-rn": "github:thedev132/hackclub-icons-rn",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/geolocation": "^3.3.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-menu/menu": "^1.1.6",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -79,7 +80,8 @@
     "react-native-web": "~0.19.10",
     "swr": "^2.2.1",
     "to-words": "^4.2.0",
-    "ts-pattern": "^5.0.8"
+    "ts-pattern": "^5.0.8",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
