--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
+    "expo-ttp-edu": "^0.1.6",
     "expo-updates": "^0.26.19",
     "expo-web-browser": "~14.0.1",
     "hcb-geo-pattern": "^1.1.0",
