--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "^18.3.1",
     "react-native": "0.76.5",
     "react-native-alert-notification": "^0.4.2",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "6.5.1",
