--- a/package.json
+++ b/package.json
@@ -36,40 +36,41 @@
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
     "eas-cli": "^13.4.2",
-    "expo": "^52.0.23",
+    "expo": "~52.0.46",
     "expo-alternate-app-icons": "^1.4.0",
-    "expo-auth-session": "~6.0.1",
-    "expo-blur": "~14.0.1",
-    "expo-build-properties": "^0.13.2",
+    "expo-auth-session": "~6.0.3",
+    "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.3",
     "expo-clipboard": "~7.0.0",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
-    "expo-dev-client": "~5.0.8",
-    "expo-device": "~7.0.2",
+    "expo-dev-client": "~5.0.20",
+    "expo-device": "~7.0.3",
     "expo-haptics": "~14.0.0",
-    "expo-image": "~2.0.3",
-    "expo-image-picker": "~16.0.3",
+    "expo-image": "~2.0.7",
+    "expo-image-picker": "~16.0.6",
     "expo-insights": "~0.8.1",
     "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.3",
+    "expo-linking": "~7.0.5",
     "expo-local-authentication": "~15.0.1",
-    "expo-location": "^18.0.5",
-    "expo-notifications": "~0.29.11",
+    "expo-location": "~18.0.10",
+    "expo-notifications": "~0.29.14",
     "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
+    "expo-splash-screen": "^0.29.24",
+    "expo-status-bar": "^2.2.3",
+    "expo-system-ui": "~4.0.9",
     "expo-ttp-edu": "^0.1.6",
-    "expo-updates": "^0.26.19",
+    "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.1",
     "hcb-geo-pattern": "^1.1.0",
     "humanize-string": "^3.0.0",
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
     "react-native-alert-notification": "^0.4.2",
     "react-native-draggable-flatlist": "^4.0.3",
+    "react-native-edge-to-edge": "^1.6.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "6.5.1",
@@ -79,7 +80,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
     "swr": "^2.2.1",
     "to-words": "^4.2.0",
@@ -91,7 +92,7 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.198",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
