--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@sentry/react-native": "~6.10.0",
     "@stripe/stripe-terminal-react-native": "^0.0.1-beta.24",
     "@thedev132/hackclub-icons-rn": "^0.0.14",
+    "@thedev132/yellowpages": "^1.0.0",
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
     "eas-cli": "^13.4.2",
