--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint:fix": "eslint App.tsx src/ --fix",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
-    "ts:check": "tsc"
+    "ts:check": "tsc",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo/config-plugins": "~9.0.0",
     "@expo/image-utils": "^0.6.3",
+    "@expo/ngrok": "^4.1.3",
     "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -37,7 +39,7 @@
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
     "eas-cli": "^13.4.2",
-    "expo": "~52.0.46",
+    "expo": "~52.0.47",
     "expo-alternate-app-icons": "^1.4.0",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
@@ -47,7 +49,7 @@
     "expo-crypto": "~14.0.1",
     "expo-dev-client": "~5.0.20",
     "expo-device": "~7.0.3",
-    "expo-document-picker": "^13.1.5",
+    "expo-document-picker": "~13.0.3",
     "expo-haptics": "~14.0.0",
     "expo-image": "~2.0.7",
     "expo-image-picker": "~16.0.6",
@@ -58,8 +60,9 @@
     "expo-location": "~18.0.10",
     "expo-notifications": "~0.29.14",
     "expo-secure-store": "~14.0.0",
+    "expo-share-intent": "^3.2.3",
     "expo-splash-screen": "^0.29.24",
-    "expo-status-bar": "^2.2.3",
+    "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-ttp-edu": "^0.1.6",
     "expo-updates": "~0.27.4",
@@ -68,6 +71,7 @@
     "humanize-string": "^3.0.0",
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
+    "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-native": "0.76.9",
     "react-native-alert-notification": "^0.4.2",
