--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@sentry/cli": "^2.44.0",
     "@sentry/react-native": "~6.10.0",
     "@stripe/stripe-terminal-react-native": "^0.0.1-beta.26",
-    "@thedev132/hackclub-icons-rn": "^0.0.14",
+    "@thedev132/hackclub-icons-rn": "^0.0.16",
     "@thedev132/yellowpages": "^1.0.0",
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
@@ -44,6 +44,7 @@
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.3",
+    "expo-checkbox": "^4.1.4",
     "expo-clipboard": "~7.0.0",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
