--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.12.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "^13.15.0",
     "swr": "^2.2.1",
     "to-words": "^4.2.0",
     "ts-pattern": "^5.0.8",
