--- a/package.json
+++ b/package.json
@@ -14,85 +14,85 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@expo/config-plugins": "~9.0.0",
+    "@expo/config-plugins": "~10.1.1",
     "@expo/image-utils": "^0.6.3",
     "@expo/ngrok": "^4.1.3",
     "@expo/react-native-action-sheet": "^4.1.0",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@hackclub/hackclub-icons-rn": "github:thedev132/hackclub-icons-rn",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-native-community/netinfo": "11.4.1",
-    "@react-native-menu/menu": "^1.1.6",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-menu/menu": "^2.0.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
     "@sentry/cli": "^2.44.0",
-    "@sentry/react-native": "~6.10.0",
+    "@sentry/react-native": "~6.14.0",
     "@stripe/stripe-terminal-react-native": "^0.0.1-beta.26",
-    "@thedev132/hackclub-icons-rn": "^0.0.16",
+    "@thedev132/hackclub-icons-rn": "^0.0.18",
     "@thedev132/yellowpages": "^1.0.0",
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
     "eas-cli": "^13.4.2",
-    "expo": "~52.0.47",
+    "expo": "^53.0.22",
     "expo-alternate-app-icons": "^1.4.0",
-    "expo-auth-session": "~6.0.3",
-    "expo-background-task": "^0.1.4",
-    "expo-blur": "~14.0.3",
-    "expo-build-properties": "~0.13.3",
+    "expo-auth-session": "~6.2.1",
+    "expo-background-task": "~0.2.8",
+    "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.8",
     "expo-checkbox": "^4.1.4",
-    "expo-clipboard": "~7.0.0",
-    "expo-constants": "~17.0.3",
-    "expo-crypto": "~14.0.1",
-    "expo-dev-client": "~5.0.20",
-    "expo-device": "~7.0.3",
-    "expo-document-picker": "~13.0.3",
-    "expo-haptics": "~14.0.0",
-    "expo-image": "~2.0.7",
-    "expo-image-picker": "~16.0.6",
-    "expo-insights": "~0.8.1",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-local-authentication": "~15.0.1",
-    "expo-location": "~18.0.10",
-    "expo-notifications": "~0.29.14",
+    "expo-clipboard": "~7.1.5",
+    "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.5",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
+    "expo-document-picker": "~13.1.6",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.4.0",
+    "expo-image-picker": "~16.1.4",
+    "expo-insights": "~0.9.3",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-local-authentication": "~16.0.5",
+    "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-quick-actions": "^5.0.0",
-    "expo-secure-store": "~14.0.0",
-    "expo-share-intent": "^3.2.3",
-    "expo-splash-screen": "^0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-task-manager": "~12.0.6",
+    "expo-secure-store": "~14.2.4",
+    "expo-share-intent": "^4.1.2",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.11",
+    "expo-task-manager": "~13.1.6",
     "expo-ttp-edu": "^0.1.6",
-    "expo-updates": "~0.27.4",
-    "expo-web-browser": "~14.0.1",
+    "expo-updates": "~0.28.17",
+    "expo-web-browser": "~14.2.0",
     "hcb-geo-pattern": "^1.1.0",
     "humanize-string": "^3.0.0",
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.6",
     "react-native-alert-notification": "^0.4.2",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-image-viewing": "^0.2.2",
-    "react-native-pager-view": "6.5.1",
+    "react-native-pager-view": "6.7.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-styled": "^0.3.3",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-reorderable-list": "^0.16.0",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.12.0",
-    "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.15.0",
-    "swr": "^2.2.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.13.0",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
+    "swr": "^2.3.6",
     "to-words": "^4.2.0",
     "ts-pattern": "^5.0.8",
     "use-debounce": "^10.0.4"
@@ -102,7 +102,7 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.198",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.0",
     "@types/react-test-renderer": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
@@ -111,7 +111,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.3",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
