--- a/eas.json
+++ b/eas.json
@@ -22,6 +22,7 @@
       //   "EXPO_PUBLIC_CLIENT_ID": "yt8JHmPDmmYYLUmoEiGtocYwg5fSOGCrcIY3G-vkMRs",
       //   "EXPO_PUBLIC_STRIPE_API_KEY": "pk_live_UAjIP1Kss29XZ6tW0MFWkjUQ",
       //   "EXPO_PUBLIC_SENTRY_DSN": "https://a805efb911be32fadcfe8609a2e709c7@o4509680631087104.ingest.us.sentry.io/4509724351594496",
+      //   "EXPO_PUBLIC_HELPSCOUT_BEACON_ID": "e3d6bbe1-aa48-43cb-8f8b-be1e33945bab",
       //   "SENTRY_AUTH_TOKEN": ""
       // },
       "android": {
