--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "ts:check": "tsc",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "eas-build-pre-install": "./.eas/hooks/pre-build.sh",
+    "eas-build-post-install": "./.eas/hooks/post-install.sh"
   },
   "dependencies": {
     "@expo/config-plugins": "~10.1.1",
@@ -32,12 +34,13 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@sentry/cli": "^2.44.0",
     "@sentry/react-native": "~6.14.0",
+    "@stripe/stripe-react-native": "^0.54.0",
     "@stripe/stripe-terminal-react-native": "^0.0.1-beta.26",
     "@thedev132/hackclub-icons-rn": "^0.0.18",
     "@thedev132/yellowpages": "^1.0.0",
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
-    "eas-cli": "^13.4.2",
+    "eas-cli": "^16.19.1",
     "expo": "^53.0.22",
     "expo-alternate-app-icons": "^1.4.0",
     "expo-auth-session": "~6.2.1",
@@ -79,6 +82,7 @@
     "react-native": "0.79.5",
     "react-native-alert-notification": "^0.4.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-helpscout-beacon": "^0.6.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "6.7.1",
     "react-native-picker-select": "^9.3.1",
@@ -89,6 +93,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.13.0",
+    "react-native-watch-connectivity": "^1.1.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "swr": "^2.3.6",
