--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "eas-build-post-install": "./.eas/hooks/post-install.sh"
   },
   "dependencies": {
-    "@expo/config-plugins": "~10.1.1",
+    "@expo/config-plugins": "~54.0.1",
     "@expo/image-utils": "^0.6.3",
     "@expo/ngrok": "^4.1.3",
     "@expo/react-native-action-sheet": "^4.1.0",
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-menu/menu": "^2.0.0",
@@ -33,7 +33,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
     "@sentry/cli": "^2.44.0",
-    "@sentry/react-native": "~6.14.0",
+    "@sentry/react-native": "~7.2.0",
     "@stripe/stripe-react-native": "^0.54.0",
     "@stripe/stripe-terminal-react-native": "^0.0.1-beta.26",
     "@thedev132/hackclub-icons-rn": "^0.0.18",
@@ -41,61 +41,62 @@
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
     "eas-cli": "^16.19.1",
-    "expo": "^53.0.22",
+    "expo": "^54.0.16",
     "expo-alternate-app-icons": "^1.4.0",
-    "expo-auth-session": "~6.2.1",
-    "expo-background-task": "~0.2.8",
-    "expo-blur": "~14.1.5",
-    "expo-build-properties": "~0.14.8",
-    "expo-checkbox": "^4.1.4",
-    "expo-clipboard": "~7.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-crypto": "~14.1.5",
-    "expo-dev-client": "~5.2.4",
-    "expo-device": "~7.1.4",
-    "expo-document-picker": "~13.1.6",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-image-picker": "~16.1.4",
-    "expo-insights": "~0.9.3",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.7",
-    "expo-local-authentication": "~16.0.5",
-    "expo-location": "~18.1.6",
-    "expo-notifications": "~0.31.4",
+    "expo-auth-session": "~7.0.8",
+    "expo-background-task": "~1.0.8",
+    "expo-blur": "~15.0.7",
+    "expo-build-properties": "~1.0.9",
+    "expo-checkbox": "~5.0.7",
+    "expo-clipboard": "~8.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.15",
+    "expo-device": "~8.0.9",
+    "expo-document-picker": "~14.0.7",
+    "expo-file-system": "^19.0.17",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.10",
+    "expo-image-picker": "~17.0.8",
+    "expo-insights": "~0.10.7",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-local-authentication": "~17.0.7",
+    "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.12",
     "expo-quick-actions": "^5.0.0",
-    "expo-secure-store": "~14.2.4",
-    "expo-share-intent": "^4.1.2",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.11",
-    "expo-task-manager": "~13.1.6",
+    "expo-secure-store": "~15.0.7",
+    "expo-share-intent": "^5.0.1",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
+    "expo-task-manager": "~14.0.8",
     "expo-ttp-edu": "^0.1.6",
-    "expo-web-browser": "~14.2.0",
+    "expo-web-browser": "~15.0.8",
     "hcb-geo-pattern": "^1.1.0",
     "humanize-string": "^3.0.0",
     "ky": "^1.2.3",
     "lodash": "^4.17.21",
     "patch-package": "^8.0.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-alert-notification": "^0.4.2",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-helpscout-beacon": "^0.6.0",
     "react-native-image-viewing": "^0.2.2",
-    "react-native-pager-view": "6.7.1",
+    "react-native-pager-view": "6.9.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-styled": "^0.3.3",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.1.1",
     "react-native-reorderable-list": "^0.16.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.13.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-watch-connectivity": "^1.1.0",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "swr": "^2.3.6",
     "to-words": "^4.2.0",
     "ts-pattern": "^5.0.8",
@@ -106,7 +107,7 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.198",
-    "@types/react": "~19.0.0",
+    "@types/react": "~19.1.1",
     "@types/react-test-renderer": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
@@ -118,5 +119,11 @@
     "prettier": "^3.0.3",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "overrides": {
+    "@stripe/stripe-terminal-react-native": {
+      "react": "$react",
+      "react-native": "$react-native"
+    }
+  }
 }
