--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "start": "expo start",
     "android": "EXPO_PUBLIC_APP_VARIANT=development expo run:android",
     "ios": "EXPO_PUBLIC_APP_VARIANT=development expo run:ios",
-    "web": "expo start --web",
     "lint": "eslint App.tsx src/",
     "lint:fix": "eslint App.tsx src/ --fix",
     "format": "prettier . --write",
@@ -72,6 +71,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-task-manager": "~14.0.8",
     "expo-ttp-edu": "^0.1.6",
+    "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
     "hcb-geo-pattern": "^1.1.0",
     "humanize-string": "^3.0.0",
