--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "js-yaml": "^4.1.1",
     "prettier": "^3.0.3",
     "typescript": "~5.8.3"
   },
