--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "ts:check": "tsc",
-    "postinstall": "patch-package",
+    "postinstall": "patch-package && node scripts/bundle-yellowpages.js",
+    "bundle:yellowpages": "node scripts/bundle-yellowpages.js",
     "eas-build-pre-install": "./.eas/hooks/pre-build.sh",
     "eas-build-post-install": "./.eas/hooks/post-install.sh",
     "publish:update": "node scripts/publish-update.js"
@@ -38,7 +39,6 @@
     "@stripe/stripe-react-native": "^0.54.0",
     "@stripe/stripe-terminal-react-native": "^0.0.1-beta.26",
     "@thedev132/hackclub-icons-rn": "^0.0.18",
-    "@thedev132/yellowpages": "^1.0.0",
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
     "eas-cli": "^16.19.1",
@@ -118,6 +118,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "js-yaml": "^4.1.1",
     "prettier": "^3.0.3",
     "typescript": "~5.8.3"
   },
