--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ EXPO_PUBLIC_CLIENT_ID=yt8JHmPDmmYYLUmoEiGtocYwg5fSOGCrcIY3G-vkMRs
 EXPO_PUBLIC_STRIPE_API_KEY=pk_live_UAjIP1Kss29XZ6tW0MFWkjUQ
 SENTRY_AUTH_TOKEN=your_api_key
 EXPO_PUBLIC_SENTRY_DSN=https://d61ba2b2693004ba8ce550ccf90cad34@o4509282537242624.ingest.us.sentry.io/4509282539995136
+
+EXPO_PUBLIC_INTERCOM_APP_ID=your_app_id
+EXPO_PUBLIC_INTERCOM_IOS_API_KEY=your_ios_api_key
+EXPO_PUBLIC_INTERCOM_ANDROID_API_KEY=your_android_api_key
