--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@intercom/intercom-react-native": "^9.5.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-native-community/netinfo": "11.4.1",
