--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-menu/menu": "^2.0.0",
     "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/native": "^6.1.10",
-    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/bottom-tabs": "^7.10.1",
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.10.1",
     "@sentry/cli": "^2.44.0",
     "@sentry/react-native": "~7.2.0",
     "@shopify/flash-list": "^2.2.0",
@@ -94,14 +94,15 @@
     "react-native-picker-select": "^9.3.1",
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-styled": "^0.3.3",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated": "~4.2.1",
     "react-native-reorderable-list": "^0.16.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
+    "react-native-screens": "~4.20.0",
     "react-native-svg": "15.12.1",
     "react-native-watch-connectivity": "^1.1.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.7.2",
     "swr": "^2.3.6",
     "to-words": "^4.2.0",
     "ts-pattern": "^5.0.8",
