--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@intercom/intercom-react-native": "^9.5.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-menu/menu": "^2.0.0",
     "@react-native-picker/picker": "2.11.1",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/native": "^6.1.10",
-    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/bottom-tabs": "^7.10.1",
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.10.1",
     "@sentry/cli": "^2.44.0",
     "@sentry/react-native": "~7.2.0",
     "@shopify/flash-list": "^2.2.0",
@@ -66,10 +67,12 @@
     "expo-location": "~19.0.7",
     "expo-notifications": "~0.32.12",
     "expo-quick-actions": "^5.0.0",
+    "expo-screen-capture": "~8.0.9",
     "expo-secure-store": "~15.0.7",
     "expo-share-intent": "^5.0.1",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-store-review": "~9.0.9",
     "expo-system-ui": "~6.0.7",
     "expo-task-manager": "~14.0.8",
     "expo-ttp-edu": "^0.1.6",
@@ -85,16 +88,15 @@
     "react-native": "0.81.4",
     "react-native-alert-notification": "^0.4.2",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-helpscout-beacon": "^0.6.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "6.9.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-styled": "^0.3.3",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated": "~4.2.1",
     "react-native-reorderable-list": "^0.16.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
+    "react-native-screens": "~4.20.0",
     "react-native-svg": "15.12.1",
     "react-native-watch-connectivity": "^1.1.0",
     "react-native-web": "^0.21.0",
