--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
   },
   "extends": "expo/tsconfig.base",
-  "include": ["src/**/*", "App.tsx", "env.d.ts"]
+  "include": ["src/**/*", "app/App.tsx", "env.d.ts", "app"],
 }
