--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     },
   },
   "extends": "expo/tsconfig.base",
-  "include": ["src/**/*", "app/App.tsx", "env.d.ts", "app"],
+  "include": ["src/**/*", "app/App.tsx", "env.d.ts", "app", "components"],
 }
